# lichess-bot

./: Cargo.toml
src/: lib.rs
