[package]
name = "lichess-bot"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A lichess bot library written in Rust."
homepage = "https://github.com/ion232/lichess-bot"
repository = "https://github.com/ion232/lichess-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
